# labs

./: 3123.c  CMakeLists.txt  README.md  lab1.c  lab1.h  lab2.c  lab2.h  lab3.h  lab4.h  main.c
data/: boomers.txt  names(old).txt  names.txt
header/: lab2.h  lab7.h
include/: lab10.h  lab11.h  lab3.h  lab4.h  lab5.h  lab8.h  lab9.h
src/: kr.c  lab1.c  lab10.c  lab11.c  lab11_utils.c  lab2.c  lab3.c  lab4.c  lab4_utils.c  lab5.c  lab5_utils.c  lab6.c  lab7.c  lab8.c  lab9.c
